@@ -1,3 +1,8 @@
+*** 20000410_3 by lusky
+revved patchlevel to b124
+fixed stats K for username@* klines
+
+
 *** 20000410_2 by lusky
 revved patchlevel to b123
 moved NICKNAMEHISTORYLENGTH to near top of config.h
